--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<nav>
 				<ul>
 					<li><button>home</button></li>
-					<li><button>contact</button></li>
+					<li><button>contacto</button></li>
 					<li><button>about me</button></li>
 				</ul>
 			</nav>
