--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 		<header>
 			<nav>
 				<ul>
-					<li><button>home</button></li>
-					<li><button>contacto</button></li>
-					<li><button>about me</button></li>
+					<li>
+						<button onclick="router.loadRoute('')">home</button>
+					</li>
+					<li>
+						<button onclick="router.loadRoute('contacto')">
+							contacto
+						</button>
+					</li>
+					<li>
+						<button onclick="router.loadRoute('about')">
+							about me
+						</button>
+					</li>
 				</ul>
 			</nav>
 		</header>
