--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 			</nav>
 		</header>
 
-		<div>
-			<h1>Hola Estudiante! Estás en el home</h1>
-		</div>
+		<div data-router></div>
+		<script src="./router.js"></script>
+		<script src="./routes.js"></script>
+		<script src="./index.js"></script>
 	</body>
 </html>
